--- a/style/style.css
+++ b/style/style.css
@@ -68,14 +68,35 @@ a.pagActiva:hover{
 .buscarYAgregar{
     display: flex;
     justify-content: space-around;
+    align-items: center;
 }
 
 .buscarYAgregar button{
     width: auto;
     max-height: 60px;
 }
-.buscarYAgregar input{
-    width: 75%;
+
+.buscarYAgregar #agregarPx{
+    width: 250px;
+    height: 100px;
+    max-height: 60px;
+}
+.buscarYAgregar .search{
+    width: 70%;
+}
+
+
+/* .radioTurnos{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 30%;
+    margin-bottom: 30px;
+} */
+
+#switchTurno{
+    position: relative;
+    margin-bottom: 20px;
 }
 
 .registroTurno{
@@ -95,16 +116,39 @@ p{
     color: #d6eef6;
 }
 
-/* .swal2-container{
-} */
+
 
 .swal2-popup{
     border: 5px solid rgb(10, 42, 57);
     width: 70%;
 }
 
-/* #swal2-html-container{
-} */
+
+
+thead{
+    max-width: 1920px;
+}
+
+tbody{
+    position: relative;
+    
+}
+
+
+.trFecha{
+    background-color: #0b1013;
+    align-self: center;
+    width: 100%;
+    height: 100%;
+
+}
+
+
+tbody tr td p{
+    font-size: larger;
+    margin: auto;
+}
+
 
 
 
